Fix grid spacing bug

--- a/src/layout/Grid.scss
+++ b/src/layout/Grid.scss
@@ -1,4 +1,6 @@
 .mdo-grid {
+  margin: 0;
+
   &.mdo-fullHeight {
     height: 100%;
   }
